# py_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  dev.dockerfile  pyproject.toml  runtime.dockerfile
data/: .gitignore
docs/: .gitignore  AGENTS.md
src/my_lib/: core.py
